--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -11,7 +11,7 @@ node_modules
 dist
 dist-ssr
 *.local
-
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -24,4 +24,4 @@ dist-ssr
 *.sw?
 
 
-verce.json
+vercel.json
