--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,8 +1,5 @@
 {
     "version": 2,
     "builds": [{"src": "./index.js", "use": "@vercel/node"}],
-    "routes": [{ "src": "/(.*)", "dest": "/"}],
-    "env": {
-    "WHATSAPP_NUMBER": "@whatsapp_number"
-  }
+    "routes": [{ "src": "/(.*)", "dest": "/"}]
 }
